--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div id="adminBanner" class="hidden emergency-banner bg-white px-4 py-4 flex flex-col items-center justify-center text-center z-50 shadow-xl relative">
         <div class="flex items-center gap-2 mb-1">
             <i class="fas fa-exclamation-triangle text-red-500 text-2xl animate-bounce"></i>
-            <span class="text-red-500 font-bold uppercase tracking-widest text-xs">ประกาศสำคัญ</span>
+            <span class="text-red-500 font-bold uppercase tracking-widest text-xs">🚨 IMPORTANT 🚨</span>
             <i class="fas fa-exclamation-triangle text-red-500 text-2xl animate-bounce"></i>
         </div>
         <p id="adminText" class="text-2xl font-black text-slate-900 leading-tight"></p>
