--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     <div id="adminBanner" class="hidden emergency-banner bg-white px-4 py-4 flex flex-col items-center justify-center text-center z-50 shadow-xl relative">
         <div class="flex items-center gap-2 mb-1">
             <i class="fas fa-exclamation-triangle text-red-500 text-2xl animate-bounce"></i>
-            <span class="text-red-500 font-bold uppercase tracking-widest text-xs">🚨 IMPORTANT 🚨</span>
-            <i class="fas fa-exclamation-triangle text-red-500 text-2xl animate-bounce"></i>
+            <span class="text-red-500 font-bold uppercase tracking-widest text-xs"> IMPORTANT </span>
+            <i class="fas fa-exclamation-triangle text-red-500 text-3xl animate-bounce"></i>
         </div>
-        <p id="adminText" class="text-2xl font-black text-slate-900 leading-tight"></p>
+        <p id="adminText" class="text-3xl font-black text-slate-900 leading-tight"></p>
     </div>
 
     <header class="pt-4 pb-4 px-6 bg-white shadow-sm z-20 flex justify-between items-center border-b border-slate-100">
