Update title and button text in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Ours Trip ฝันดีนะ...อย่าดื้อกับหมอนใบนั้นที่เธอใช้นอนฝันยามหนุน(Emergency Banner)</title>
+    <title>Ours Trip ฝันดีนะ...อย่าดื้อกับหมอนใบนั้นที่เธอใช้นอนฝันยามหนุน</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     
@@ -30,7 +30,7 @@
         <div class="flex items-center gap-2 mb-1">
             <i class="fas fa-exclamation-triangle text-red-500 text-2xl animate-bounce"></i>
             <span class="text-red-500 font-bold uppercase tracking-widest text-xs"> IMPORTANT </span>
-            <i class="fas fa-exclamation-triangle text-red-500 text-3xl animate-bounce"></i>
+            <i class="fas fa-exclamation-triangle text-red-500 text-2xl animate-bounce"></i>
         </div>
         <p id="adminText" class="text-3xl font-black text-slate-900 leading-tight"></p>
     </div>
@@ -81,7 +81,7 @@
         </div>
         <div class="p-4 bg-white border-t safe-area-pb">
             <button onclick="app.openExternal()" class="w-full py-3 bg-indigo-50 text-indigo-600 rounded-xl font-bold text-sm flex items-center justify-center gap-2 hover:bg-indigo-100">
-                <i class="fas fa-external-link-alt"></i> เปิดในแอป Google Maps
+                <i class="fas fa-external-link-alt"></i> เปิดใน Google Maps
             </button>
         </div>
     </div>
