--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@ const firebaseConfig = {
             if (message && message !== "") {
                 document.getElementById('adminText').innerText = message;
                 banner.classList.remove('hidden');
+                alertSound.play().catch(e => console.log("แตะหน้าจอก่อนเสียงถึงจะดัง"));
             } else {
                 banner.classList.add('hidden');
             }
@@ -163,6 +164,7 @@ const firebaseConfig = {
 
         onValue(tripRef, (snapshot) => {
             document.getElementById('loading').style.display = 'none';
+            const alertSound = new Audio("https://cdn.pixabay.com/download/audio/2021/08/04/audio_0625c1539c.mp3?filename=message-incoming-132126.mp3");
             const list = document.getElementById('placeList');
             list.innerHTML = '';
             const data = snapshot.val();
