--- a/index.html
+++ b/index.html
@@ -50,6 +50,20 @@
             <i class="fas fa-circle-notch fa-spin"></i> กำลังโหลด...
         </div>
         <ul id="placeList" class="space-y-3 relative"></ul>
+        <ul id="placeList" class="space-y-3 relative"></ul>
+        
+        <div class="mt-8 mb-4 border-t border-slate-200 pt-4">
+            <h3 class="text-sm font-bold text-slate-400 mb-2 uppercase tracking-wide px-2"><i class="far fa-comments"></i> Chat Room</h3>
+            <div id="chatBox" class="h-48 overflow-y-auto bg-slate-100 rounded-xl p-3 space-y-2 mb-2 border border-slate-200">
+                <div class="text-center text-xs text-slate-400 mt-20">Start chatting...</div>
+            </div>
+            <div class="flex gap-2">
+                <input type="text" id="chatInput" placeholder="Type here..." class="flex-1 p-3 rounded-xl border border-slate-200 focus:outline-none focus:ring-2 focus:ring-indigo-500 bg-white shadow-sm">
+                <button onclick="app.sendChat()" class="bg-indigo-500 text-white px-4 rounded-xl shadow-sm hover:bg-indigo-600 transition"><i class="fas fa-paper-plane"></i></button>
+            </div>
+        </div>
+        
+        </main>
     </main>
 
     <button onclick="app.openAddModal()" class="fixed bottom-8 right-6 w-16 h-16 btn-gradient text-white rounded-full shadow-xl flex items-center justify-center text-2xl z-30 transition hover:scale-110 active:scale-90">
@@ -107,6 +121,7 @@ const firebaseConfig = {
         const db = getDatabase(firebaseApp);
         const tripRef = ref(db, 'trips/group1');
         const bannerRef = ref(db, 'trips/announcement');
+        const chatRef = ref(db, 'trips/chat');
         window.app = {
             localData: [],
             currentPlaceName: '',
@@ -145,7 +160,15 @@ const firebaseConfig = {
                 if (window.app.localData.length === 0) return alert('เพิ่มสถานที่ก่อนนะครับ');
                 const placesQuery = window.app.localData.map(item => encodeURIComponent(item.name)).join('/');
                 window.open(`https://www.google.com/maps/dir/${placesQuery}`, '_blank');
-            }
+            },
+            sendChat: function() {
+                    const input = document.getElementById('chatInput');
+                    const msg = input.value.trim();
+                    if (!msg) return;
+                    // ส่งข้อความพร้อมเวลา
+                    push(chatRef, { text: msg, time: Date.now() });
+                    input.value = '';
+                }
         };
 
         // Banner Listener
