--- a/index.html
+++ b/index.html
@@ -219,6 +219,25 @@ const firebaseConfig = {
                 list.innerHTML = `<div class="text-center text-slate-400 mt-10 opacity-50">กดปุ่ม + เพื่อเพิ่มสถานที่</div>`;
             }
         });
+        onValue(chatRef, (snapshot) => {
+                const chatBox = document.getElementById('chatBox');
+                chatBox.innerHTML = '';
+                const data = snapshot.val();
+                if (data) {
+                    const msgs = Object.values(data).sort((a, b) => a.time - b.time);
+                    msgs.forEach(msg => {
+                        const date = new Date(msg.time);
+                        const timeStr = date.getHours().toString().padStart(2,'0') + ':' + date.getMinutes().toString().padStart(2,'0');
+                        const div = document.createElement('div');
+                        div.className = 'bg-white p-2 rounded-lg shadow-sm text-sm text-slate-700 w-fit max-w-[85%]';
+                        div.innerHTML = `<span>${msg.text}</span><span class="text-[10px] text-slate-300 ml-2">${timeStr}</span>`;
+                        chatBox.appendChild(div);
+                    });
+                    chatBox.scrollTop = chatBox.scrollHeight;
+                } else {
+                    chatBox.innerHTML = '<div class="text-center text-xs text-slate-400 mt-20">No messages yet</div>';
+                }
+            });
     </script>
 </body>
 </html>
