--- a/index.html
+++ b/index.html
@@ -100,14 +100,15 @@
 
         // --- Config ---
         const firebaseConfig = {
-          apiKey: "AIzaSyAbm9E9R2CB9Ms5XHtgX7wqDqR8xRpohQg",
-          authDomain: "mind-tripz.firebaseapp.com",
-          databaseURL: "https://mind-tripz-default-rtdb.asia-southeast1.firebasedatabase.app",
-          projectId: "mind-tripz",
-          storageBucket: "mind-tripz.firebasestorage.app",
-          messagingSenderId: "7159039265",
-          appId: "1:7159039265:web:471d2f306f8a3d5d512a60"
+          apiKey: "AIzaSyCnugIC3-WQ5bA-cMN992qBKAii4lywwiA",
+          authDomain: "ours-trips.firebaseapp.com",
+          databaseURL: "https://ours-trips-default-rtdb.asia-southeast1.firebasedatabase.app",
+          projectId: "ours-trips",
+          storageBucket: "ours-trips.firebasestorage.app",
+          messagingSenderId: "364744279782",
+          appId: "1:364744279782:web:b741af581f97b8d1081d27"
         };
+
         
         // Init Firebase
         const firebaseApp = initializeApp(firebaseConfig);
